--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -21,10 +21,18 @@
   src: url('../fonts/SF-Pro-Display-Light.otf') format('opentype');
 }
 
+.content-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 70px;
+}
+
 .card-stack {
     width: 100%;
     height: 700px;
-    perspective: 1000px;
+    perspective: 1500px;
     display: flex;
     justify-content: center;
     margin-top: 70px;
@@ -83,7 +91,7 @@
   
   .card {
     width: 300px;
-    height: 169px;
+    height: 190px;
     background: #E5E5E5 0% 0% no-repeat padding-box;
     border-radius: 24px;
     opacity: 1;
@@ -94,6 +102,7 @@
     position: fixed;
     transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
     background-color: rgba(229,229,229,0.4);
+    /* box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2); */
   }
   
   .card .card-number {
@@ -113,7 +122,7 @@
 
   .card .card-type{
     margin-left: 230px;
-    margin-top: 10px;
+    margin-top: 40px;
     width: 30px;
     height: 30px;
   }
@@ -147,7 +156,35 @@
     transform :translateY(0px) rotateX(0deg) scale(0.8) translateZ(-100px);
   }
 
-.rectangle-1{
-  z-index: -5;
-  margin-left: -300px;
+
+  .shapes{
+    transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+.shapes .rectangle{
+  margin-left: -125px;
+    margin-top: 50px;
+    transform: rotate(0deg);
 }
+.shapes .rectangle-2{
+  margin-left: 177px;
+  margin-top: 176px;
+  transform: rotate(0deg) translateX(-50px);;
+}
+
+.shapes .polygon-1{
+  margin-top: 200px;
+  margin-left: -149px;
+  transform: translateX(-50px) rotate(-57deg);
+}
+.shapes .polygon-2{
+  margin-top: 80px;
+  transform: translateX(100px) rotate(90deg);
+}
+
