--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -52,11 +52,13 @@
     margin-left: 24px;
     margin-right: 24px;
     align-items: center;
+    transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
   }
   .big-title{
     font-family: 'SF-Pro-Display-Bold';
     font-size: 24px;
     z-index: 0;
+    transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
   }
 
   .button{
@@ -73,6 +75,7 @@
     rotate: 90deg;
     background-color: rgba(229,229,229,0.4);
     margin-left: -200px;
+    transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
     z-index: -1;
   }
   .button-text{
@@ -111,6 +114,15 @@
     opacity: 1;
     margin-left: 24px;
     margin-top: 35px;
+  }
+
+  .card .view-details-button{
+    position: fixed;
+    font-family: 'SF-Pro-Display-Bold';
+    font-weight: bold;
+    opacity: 1;
+    margin-left: 150px;
+    margin-top: -80px;
   }
 
   .card .card-icon{
@@ -156,6 +168,26 @@
     transform :translateY(0px) rotateX(0deg) scale(0.8) translateZ(-100px);
   }
 
+  .no-cards{
+    font-family: 'SF-Pro-Display-Light';
+    font-size: 14px;
+    opacity: 0.6;
+    display: flex;
+    transform: translateY(-300px);
+    align-items: center;
+    justify-content: center;
+    transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
+  }
+  .see-details{
+    font-family: 'SF-Pro-Display-Light';
+    font-size: 14px;
+    opacity: 0.6;
+    display: flex;
+    transform: translateY(-500px);
+    align-items: center;
+    justify-content: center;
+    transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
+  }
 
   .shapes{
     transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
