--- a/src/components/Transactions.css
+++ b/src/components/Transactions.css
@@ -23,17 +23,24 @@
 
 .transactions-container {
     padding: 20px;
-    margin-top: 700px;
-    transition: transform 5s cubic-bezier(0.48, 1.34, .63, 1);
+    margin-top: 750px;
+    transition: transform 1s cubic-bezier(0.48, 1.34, .63, 1);
   }
   
   .transactions-title {
-    font-family: 'SF-Pro-Display-Bold';
+    font-family: 'SF-Pro-Display-Medium';
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    letter-spacing: 0.1px;
+    opacity: 0.7;
   }
   
+  .transaction-title {
+    font-family: 'SF-Pro-Display-Medium';
+    font-size: 14px;
+    letter-spacing: 0.1px; 
+  }
   .transactions {
     display: flex;
     flex-direction: column;
@@ -46,7 +53,6 @@
   }
   
   .transaction-entry {
-    background-color: #ffffff;
     padding-bottom: 20px;
     display: flex;
     align-items: center;
@@ -58,19 +64,20 @@
     gap: 3px;
     width: 60%;
   }
-  .transactions-title {
-    font-family: 'SF-Pro-Display-Medium';
-  }
+ 
   .transaction-discription {
     font-family: 'SF-Pro-Display-Light';
-    font-size: small;
+    font-size: smaller;
+    letter-spacing: 0.1px; 
+    opacity: 0.6;
   }
   .transaction-amount{
     font-family: 'SF-Pro-Display-Bold';
-}
+  }
+
   .transaction-image {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     display: flex;
     align-items: center;
